--- a/src/styles/results.scss
+++ b/src/styles/results.scss
@@ -103,11 +103,14 @@
 		margin-bottom: 0;
 	}
 
+	&__img-container {
+		width: 48%;
+	}
+
 	&__poster {
 		border: 1px solid rgba(0, 0, 0, 0.1);
 		border-radius: 0.15rem;
 		padding: 10px;
-		margin-right: 10px;
 		width: 5rem;
 	}
 
@@ -115,6 +118,7 @@
 		display: flex;
 		flex-direction: column;
 		align-self: center;
+		width: 51%;
 	}
 
 	&__description {
